[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdjmatch"
version = "0.0.1"
description = "Fast, control-calibrated annotation of T-cell receptor antigen specificity"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ISALGO laboratory", email = "mikhail.shugay@gmail.com" }]
keywords = ["TCR", "VDJdb", "antigen-specificity", "immunology", "AIRR", "repertoire", "E-value"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "seqtree>=0.1.0",     # SubstitutionMatrix.penalty Python API (0.1.0)
    "polars>=1.0",
]

[project.optional-dependencies]
cli = ["tqdm"]                    # match --verbose progress bar (imported lazily; core never requires it)
test = ["pytest>=7.4", "hypothesis"]
bench = ["psutil", "huggingface_hub", "matplotlib", "seaborn", "scikit-learn", "rapidfuzz"]  # HF benchmark; matplotlib/seaborn: boxplots; scikit-learn/rapidfuzz: AUC0.1 + clustering internal metrics
control = ["seqtree[control]", "huggingface_hub"]  # TRA/mouse controls beyond bundled human TRB
ods = ["ezodf"]                   # read ImmuneWatch DETECT golden .ods in tests
vdjam = ["biopython>=1.84"]       # bench/gen_vdjam.py: BLOSUM62 baseline (mirpy-lib added for V/J trimming model)

[project.scripts]
vdjmatch = "vdjmatch.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/antigenomics/vdjmatch"
Repository = "https://github.com/antigenomics/vdjmatch"
Documentation = "https://antigenomics.github.io/vdjmatch/"

[tool.hatch.build.targets.wheel]
packages = ["src/vdjmatch"]
# resources/ (vdjam.txt, score_coef.txt, segm_score.txt) live inside the package dir and are
# shipped automatically by hatchling — no force-include needed.
